--- a/homePage.css
+++ b/homePage.css
@@ -297,3 +297,56 @@ height: 30px;
     background-color:rgba(227, 222, 222, 0.5);
     font-size: 20px;
 }
+#prod{
+    width:80%;
+    margin: auto;
+    /* border: 1px solid blue;  */
+    display: flex;
+}
+
+#prod1{
+    /* border: 1px red solid; */
+    width: 20%;
+    margin: 5px;
+    height: auto;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+#prod1 > img {
+    width: 90%;
+
+}
+
+.off{
+    text-align: right;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    color: red;
+}
+
+#prod1>p{
+    color: grey;
+    font-size: 12px;
+    margin-left: 10px;
+}
+#prod1 > h5 {
+    margin-left: 10px;
+    margin-top: -10px;
+}
+
+#select{
+    width: 90%;
+    margin: auto;
+}
+.price>button{
+    /* margin-left: 50px; */
+    /* width: 40px; */
+    margin-bottom: 10px;
+}
+#qty{
+    display: flex;
+    margin-top:10px ;
+    
+}
+#qtyin{
+    width: 30px;
+}
