--- a/homePage.css
+++ b/homePage.css
@@ -350,3 +350,79 @@ height: 30px;
 #qtyin{
     width: 30px;
 }
+   
+#company-info{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+    gap:40px;
+    background-color: rgb(254, 254, 254);
+
+    
+}
+#sc{
+    margin-top:40px
+}
+#policies{
+    margin-top: 40px;
+}
+ul > h2{
+    margin-top: -55px;
+    font-size: 17px;
+    border: 0px;
+}
+ul{
+    color:#f7941D;
+    list-style: none;
+    font-size: 15px;
+}
+ul li{
+    color: rgb(4, 4, 4);
+    text-decoration: none;
+    font-size: 13px;
+}
+
+ul:nth-child(2){
+    margin-top: -20px;
+}
+ul:nth-child(4){
+    margin-top: 40px;
+}
+ul:nth-child(5){
+    margin-top: -60px;
+}
+
+#company-info > form {
+    margin-top: -100px;
+    margin-left: 20px;
+}
+#company-info > form > #Email{ 
+    border:none;
+    background-color: #fff;
+    border-radius: 3px;
+    font-size: 13px;
+}
+#company-info > form > #subs{
+    border-radius: 3px;
+    background-color: #f7941D;
+    font-size: 13px;
+    
+    color: #fff;
+    margin-left: -4px;
+}
+
+#more {
+    width: 100%;
+    margin: 40px 30px 0px 80px ;
+   
+}
+#more > h6{
+    font-size: 16px;
+    font-weight: 500;
+    color: #f98d29;
+}
+#more > p{
+    font-size: 12px;
+    line-height: 17px;
+}
