--- a/homePage.css
+++ b/homePage.css
@@ -1,428 +1,425 @@
-#navbarContainer{
-    width: 80%;
-    margin: auto;
-    /* border: 1px solid black; */
-    display: flex;
-    /* justify-content:flex-start; */
-    /* margin-top: 20px; */
-   
-}
-#searchbar{
-    margin-left: 20px;
-    margin-top: 110px;
-    width: 500px;
-    height: 30px;
-}
-img{
-    width: 200px;
-    height: 200px;
+.precontainer {
+  display: flex;
+  gap: 20px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  justify-content: flex-end;
+  margin-right: 150px;
 }
 
-#cartnav{
-    padding: 10px;
-    margin: auto;
-    /* border: 1px solid black; */
-    display: flex;
-    width: 120px;
-    height: 60px;
-    justify-content: space-evenly;
-    background-color: rgb(238, 235, 235);
+#newnavbarContainer {
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+  margin: auto;
+  margin-top: -60px;
+}
+.newbblogo {
+  width: 170px;
+  height: 130px;
+}
+.newSearchsection {
+  align-items: center;
+  margin-top: 65px;
+  margin-right: 150px;
+}
+#newsearchbar {
+  width: 500px;
+  height: 30px;
 }
 
-#basket{
-    font-size: 30px;
+#newcartnav {
+  display: flex;
+  gap: 10px;
+  margin-top: 65px;
+  align-items: flex-start;
+  background-color: rgb(222, 218, 218);
+  padding-top: 15px;
+  font-family: "Courier New", Courier, monospace;
+  height: 39px;
 }
 
-#searchicon{
-text-align: center;
-background-color: greenyellow;
-margin-top: 110px;
-width: 30px;
-height: 30px;
+#basket {
+  font-size: 30px;
 }
 
-#cartnav > p{
-    font-family:Arial, Helvetica, sans-serif;
+#category {
+  width: 80%;
+  margin: auto;
+  display: flex;
+  justify-items: flex-start;
+  margin-top: -10px;
 }
-#login{
-    justify-content: flex-end;
-    display: flex;
-    gap: 20px;
-    width: 60%;
-    margin: auto;
-    height: 40px;
-    /* border: 1px solid red; */
+#shopbycategory {
+  background-color: greenyellow;
+  width: 200px;
+  padding: 10px;
 }
-#category{
-    width: 80%;
-    margin: auto;
-    display: flex;
-    justify-items: flex-start;
-    gap:20px;
-
-}
-#shopbycategory{
-    background-color: greenyellow;
-    /* border: 1px red solid; */
-    padding: 10px;
-}
-#shopbycategory+div{
-    width: 800px;
-    padding: 10px;
-    border: .1px solid grey;
+#shopbycategory + div {
+  width: 950px;
+  padding: 10px;
+  border: 0.1px solid grey;
 }
 
-.cry{
-    /* border: 1px red solid; */
-    width: 80%;
-    height: auto;
-    margin: auto;
-    margin-top: 20px;
-    position: relative;
+.cry {
+  /* border: 1px red solid; */
+  width: 80%;
+  height: auto;
+  margin: auto;
+  margin-top: 20px;
+  position: relative;
 }
 
-#crauser{
-    width:100%;
-    height: 100%;
-    /* margin: 20px 100px; */
-
-   
-}
-/* #btncrauser{
-    text-align: center;
-} */
-#btncrauser> button:nth-child(1){
-    border: none;
-    background-color:rgba(227, 222, 222, 0.5);
-    position: absolute;
-    left: 200px;
-    bottom: 13px;
-}
-#btncrauser> button:nth-child(2){
-    /* height: 10px; */
-    border: none;
-    background-color:rgba(227, 222, 222, 0.5);
-    position: absolute;
-    left: 283px;
-    bottom: 13px;
-}
-#btncrauser> button:nth-child(3){
-    border: none;
-    background-color:rgba(227, 222, 222, 0.5);
-    position: absolute;
-    left: 363px;
-    bottom: 13px;
-}
-#btncrauser> button:nth-child(4){
-    border: none;
-    background-color:rgba(227, 222, 222, 0.5);
-    position: absolute;
-    left: 443px;
-    bottom: 13px;
-}
-#btncrauser> button:nth-child(5){
-    border: none;
-    background-color:rgba(227, 222, 222, 0.5);
-    position: absolute;
-    left: 533px;
-    bottom: 13px;
-}
-#btncrauser> button:nth-child(6){
-    border: none;
-    background-color:rgba(227, 222, 222, 0.5);
-    position: absolute;
-    left: 613px;
-    bottom: 13px;
-}
-#btncrauser> button:nth-child(7){
-    border: none;
-    background-color:rgba(227, 222, 222, 0.5);
-    position: absolute;
-    left: 693px;
-    bottom: 13px;
-}
-#btncrauser> button:nth-child(8){
-    border: none;
-    background-color:rgba(227, 222, 222, 0.5);
-    position: absolute;
-    left: 773px;
-    bottom: 13px;
-}
-#bank>h1{
-    text-align: center;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: grey;
-}
-#bankcontainer{
-   display: flex;
-    width: 60%;
-    gap: 20px;
-    /* border: 1px solid red; */
-    margin: auto;
+#crauser {
+  width: 100%;
+  height: 100%;
 }
 
-#bankcontainer>div{
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+#btncrauser > button:nth-child(1) {
+  border: none;
+  background-color: rgba(227, 222, 222, 0.5);
+  position: absolute;
+  left: 200px;
+  bottom: 13px;
 }
-#fruits>h1{
-    text-align: center;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: grey;
+#btncrauser > button:nth-child(2) {
+  border: none;
+  background-color: rgba(227, 222, 222, 0.5);
+  position: absolute;
+  left: 283px;
+  bottom: 13px;
 }
-#fruitscontainer{
-     /* border: 1px solid red; */
-     width: 60%;
-     margin: auto;
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
+#btncrauser > button:nth-child(3) {
+  border: none;
+  background-color: rgba(227, 222, 222, 0.5);
+  position: absolute;
+  left: 363px;
+  bottom: 13px;
 }
-#fruitsdiv1>img{
-    width: 90%;
-    height: 90%;
-    margin-top: 20px;
-    margin-left: 20px;
-    /* border: 1px solid red; */
+#btncrauser > button:nth-child(4) {
+  border: none;
+  background-color: rgba(227, 222, 222, 0.5);
+  position: absolute;
+  left: 443px;
+  bottom: 13px;
 }
-#fruitsdiv2{
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-
+#btncrauser > button:nth-child(5) {
+  border: none;
+  background-color: rgba(227, 222, 222, 0.5);
+  position: absolute;
+  left: 533px;
+  bottom: 13px;
 }
-#staples>h1{
-    text-align: center;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: grey;
+#btncrauser > button:nth-child(6) {
+  border: none;
+  background-color: rgba(227, 222, 222, 0.5);
+  position: absolute;
+  left: 613px;
+  bottom: 13px;
 }
-#staplescontainer{
-   display: flex;
-    width: 60%;
-    gap: 20px;
-    /* border: 1px solid red; */
-    margin: auto;
+#btncrauser > button:nth-child(7) {
+  border: none;
+  background-color: rgba(227, 222, 222, 0.5);
+  position: absolute;
+  left: 693px;
+  bottom: 13px;
 }
-
-#staplescontainer>div{
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+#btncrauser > button:nth-child(8) {
+  border: none;
+  background-color: rgba(227, 222, 222, 0.5);
+  position: absolute;
+  left: 773px;
+  bottom: 13px;
 }
-
-#Beverages>h1{
-    text-align: center;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: grey;
+#bank > h1 {
+  text-align: center;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  color: grey;
 }
-#Beveragescontainer{
-     /* border: 1px solid red; */
-     width: 60%;
-     margin: auto;
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-}
-#beveragesdiv1>img{
-    width: 90%;
-    height: 90%;
-    margin-top: 20px;
-    margin-left: 20px;
-    /* border: 1px solid red; */
-}
-#beveragesdiv2{
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-}
-
-#snacks>h1{
-    text-align: center;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: grey;
-}
-#snackscontainer{
-   display: flex;
-    width: 60%;
-    gap: 20px;
-    /* border: 1px solid red; */
-    margin: auto;
+#bankcontainer {
+  display: flex;
+  gap: 20px;
+  margin: auto;
+  margin: auto;
+  width: 80%;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
 }
 
-#snackscontainer>div{
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;}
-
-#cleaning>h1{
-    text-align: center;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: grey;
+#bankcontainer > div {
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
-#cleaningcontainer{
-   display: flex;
-    width: 60%;
-    gap: 20px;
-    /* border: 1px solid red; */
-    margin: auto;
+#bankcontainer > div > img {
+  height: 200px;
+  width: 240px;
 }
-#cleaningcontainer>div{
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;}
-
-#featured>h1{
-        text-align: center;
-        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-        color: grey;
-    }
-
-#featured{
-        /* border: 1px red solid; */
-        width: 80%;
-        height: auto;
-        margin: auto;
-        margin-top: 20px;
-        position: relative;
-    }
-    
-#featuredcrauser{
-        width:100%;
-        height: 100%;
-        /* margin: 20px 100px; */
-       
+#fruits > h1 {
+  text-align: center;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  color: grey;
 }
-#leftbtn{
-    position: absolute;
-    left: 30px;
-    top:300px;
-    border: none;
-    background-color:rgba(227, 222, 222, 0.5);
-    font-size: 20px;
+#fruitscontainer {
+  /* border: 1px solid red; */
+  width: 60%;
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
 }
-#rightbtn{
-    position: absolute;
-    right: 30px;
-    top:300px;
-    border: none;
-    background-color:rgba(227, 222, 222, 0.5);
-    font-size: 20px;
+#fruitsdiv1 > img {
+  width: 90%;
+  height: 90%;
+  margin-top: 20px;
+  margin-left: 20px;
+  /* border: 1px solid red; */
 }
-#prod{
-    width:80%;
-    margin: auto;
-    /* border: 1px solid blue;  */
-    display: flex;
+#fruitsdiv2 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+#staples > h1 {
+  text-align: center;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  color: grey;
+}
+#staplescontainer {
+  display: flex;
+  gap: 20px;
+  margin: auto;
+  margin: auto;
+  width: 80%;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
 }
 
-#prod1{
-    /* border: 1px red solid; */
-    width: 20%;
-    margin: 5px;
-    height: auto;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+#staplescontainer > div {
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+#staplescontainer > div > img {
+  width: 250px;
+  height: 200;
 }
 
-#prod1 > img {
-    width: 90%;
-
+#Beverages > h1 {
+  text-align: center;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  color: grey;
+}
+#Beveragescontainer {
+  /* border: 1px solid red; */
+  width: 60%;
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+#beveragesdiv1 > img {
+  width: 90%;
+  height: 90%;
+  margin-top: 20px;
+  margin-left: 20px;
+  /* border: 1px solid red; */
+}
+#beveragesdiv2 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
 }
 
-.off{
-    text-align: right;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    color: red;
+#snacks > h1 {
+  text-align: center;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  color: grey;
+}
+#snackscontainer {
+  display: flex;
+  gap: 20px;
+  margin: auto;
+  margin: auto;
+  width: 80%;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
 }
 
-#prod1>p{
-    color: grey;
-    font-size: 12px;
-    margin-left: 10px;
+#snackscontainer > div {
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
-#prod1 > h5 {
-    margin-left: 10px;
-    margin-top: -10px;
+#snackscontainer > div > img {
+  width: 250px;
+  height: 200px;
 }
 
-#select{
-    width: 90%;
-    margin: auto;
+#cleaning > h1 {
+  text-align: center;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  color: grey;
 }
-.price>button{
-    /* margin-left: 50px; */
-    /* width: 40px; */
-    margin-bottom: 10px;
+#cleaningcontainer {
+  display: flex;
+  gap: 20px;
+  margin: auto;
+  margin: auto;
+  width: 80%;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
 }
-#qty{
-    display: flex;
-    margin-top:10px ;
-    
-}
-#qtyin{
-    width: 30px;
-}
-   
-#company-info{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 10px;
-    gap:40px;
-    background-color: rgb(254, 254, 254);
-
-    
-}
-#sc{
-    margin-top:40px
-}
-#policies{
-    margin-top: 40px;
-}
-ul > h2{
-    margin-top: -55px;
-    font-size: 17px;
-    border: 0px;
-}
-ul{
-    color:#f7941D;
-    list-style: none;
-    font-size: 15px;
-}
-ul li{
-    color: rgb(4, 4, 4);
-    text-decoration: none;
-    font-size: 13px;
+#cleaningcontainer > div {
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
-ul:nth-child(2){
-    margin-top: -20px;
+#cleaningcontainer > div > img {
+  width: 250px;
+  height: 200px;
 }
-ul:nth-child(4){
-    margin-top: 40px;
+#featured > h1 {
+  text-align: center;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  color: grey;
 }
-ul:nth-child(5){
-    margin-top: -60px;
+
+#featured {
+  /* border: 1px red solid; */
+  width: 80%;
+  height: auto;
+  margin: auto;
+  margin-top: 20px;
+  position: relative;
+}
+
+#featuredcrauser {
+  width: 100%;
+  height: 100%;
+  /* margin: 20px 100px; */
+}
+#leftbtn {
+  position: absolute;
+  left: 30px;
+  top: 300px;
+  border: none;
+  background-color: rgba(227, 222, 222, 0.5);
+  font-size: 20px;
+}
+#rightbtn {
+  position: absolute;
+  right: 30px;
+  top: 300px;
+  border: none;
+  background-color: rgba(227, 222, 222, 0.5);
+  font-size: 20px;
+}
+#prod {
+  border: 1px solid red;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  width: 80%;
+  margin: auto;
+}
+
+.prod1 {
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  padding: 10px;
+}
+
+.off {
+  text-align: right;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  color: red;
+}
+
+.prod1 > p {
+  color: grey;
+  font-size: 12px;
+  margin-left: 10px;
+}
+.prod1 > h5 {
+  margin-left: 10px;
+  margin-top: -10px;
+}
+
+.select {
+  width: 90%;
+  margin-left: 10px;
+}
+.price > button {
+  /* margin-left: 50px; */
+  /* width: 40px; */
+  margin-bottom: 10px;
+}
+.qty {
+  display: flex;
+  margin-top: 10px;
+  margin-left: 20px;
+}
+#qtyin {
+  width: 30px;
+}
+
+#company-info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+  gap: 40px;
+  background-color: rgb(254, 254, 254);
+}
+#sc {
+  margin-top: 40px;
+}
+#policies {
+  margin-top: 40px;
+}
+ul > h2 {
+  margin-top: -55px;
+  font-size: 17px;
+  border: 0px;
+}
+ul {
+  color: #f7941d;
+  list-style: none;
+  font-size: 15px;
+}
+ul li {
+  color: rgb(4, 4, 4);
+  text-decoration: none;
+  font-size: 13px;
+}
+
+ul:nth-child(2) {
+  margin-top: -20px;
+}
+ul:nth-child(4) {
+  margin-top: 40px;
+}
+ul:nth-child(5) {
+  margin-top: -60px;
 }
 
 #company-info > form {
-    margin-top: -100px;
-    margin-left: 20px;
+  margin-top: -100px;
+  margin-left: 20px;
 }
-#company-info > form > #Email{ 
-    border:none;
-    background-color: #fff;
-    border-radius: 3px;
-    font-size: 13px;
+#company-info > form > #Email {
+  border: none;
+  background-color: #fff;
+  border-radius: 3px;
+  font-size: 13px;
 }
-#company-info > form > #subs{
-    border-radius: 3px;
-    background-color: #f7941D;
-    font-size: 13px;
-    
-    color: #fff;
-    margin-left: -4px;
+#company-info > form > #subs {
+  border-radius: 3px;
+  background-color: #f7941d;
+  font-size: 13px;
+
+  color: #fff;
+  margin-left: -4px;
 }
 
 #more {
-    width: 100%;
-    margin: 40px 30px 0px 80px ;
-   
+  width: 100%;
+  margin: 40px 30px 0px 80px;
 }
-#more > h6{
-    font-size: 16px;
-    font-weight: 500;
-    color: #f98d29;
+#more > h6 {
+  font-size: 16px;
+  font-weight: 500;
+  color: #f98d29;
 }
-#more > p{
-    font-size: 12px;
-    line-height: 17px;
+#more > p {
+  font-size: 12px;
+  line-height: 17px;
 }
