--- a/homePage.css
+++ b/homePage.css
@@ -4,6 +4,7 @@
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   justify-content: flex-end;
   margin-right: 150px;
+  flex-wrap: wrap;
 }
 
 #newnavbarContainer {
@@ -12,15 +13,27 @@
   width: 80%;
   margin: auto;
   margin-top: -60px;
+  flex-wrap: wrap;
 }
-.newbblogo {
+/* .newbblogo {
   width: 170px;
   height: 130px;
+} */
+.newbblogo {
+  width: 100%; /* set initial width to 100% */
+  height: auto; /* allow height to adjust proportionally */
+  max-width: 170px; /* set max-width to original size */
+  max-height: 130px; /* set max-height to original size */
 }
-.newSearchsection {
+/* .newSearchsection {
   align-items: center;
   margin-top: 65px;
   margin-right: 150px;
+} */
+.newSearchsection {
+  align-items: center;
+  margin-top: 65px;
+  margin-right: 1%; /* adjust margin for responsiveness */
 }
 #newsearchbar {
   width: 500px;
@@ -30,7 +43,7 @@
 #newcartnav {
   display: flex;
   gap: 10px;
-  margin-top: 65px;
+  margin-top: 48px;
   align-items: flex-start;
   background-color: rgb(222, 218, 218);
   padding-top: 15px;
@@ -74,56 +87,61 @@
   height: 100%;
 }
 
-#btncrauser > button:nth-child(1) {
+#btncrauser {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+#btncrauser > div:nth-child(1) {
   border: none;
   background-color: rgba(227, 222, 222, 0.5);
   position: absolute;
   left: 200px;
   bottom: 13px;
 }
-#btncrauser > button:nth-child(2) {
+#btncrauser > div:nth-child(2) {
   border: none;
   background-color: rgba(227, 222, 222, 0.5);
   position: absolute;
   left: 283px;
   bottom: 13px;
 }
-#btncrauser > button:nth-child(3) {
+#btncrauser > div:nth-child(3) {
   border: none;
   background-color: rgba(227, 222, 222, 0.5);
   position: absolute;
   left: 363px;
   bottom: 13px;
 }
-#btncrauser > button:nth-child(4) {
+#btncrauser > div:nth-child(4) {
   border: none;
   background-color: rgba(227, 222, 222, 0.5);
   position: absolute;
   left: 443px;
   bottom: 13px;
 }
-#btncrauser > button:nth-child(5) {
+#btncrauser > div:nth-child(5) {
   border: none;
   background-color: rgba(227, 222, 222, 0.5);
   position: absolute;
   left: 533px;
   bottom: 13px;
 }
-#btncrauser > button:nth-child(6) {
+#btncrauser > div:nth-child(6) {
   border: none;
   background-color: rgba(227, 222, 222, 0.5);
   position: absolute;
   left: 613px;
   bottom: 13px;
 }
-#btncrauser > button:nth-child(7) {
+#btncrauser > div:nth-child(7) {
   border: none;
   background-color: rgba(227, 222, 222, 0.5);
   position: absolute;
   left: 693px;
   bottom: 13px;
 }
-#btncrauser > button:nth-child(8) {
+#btncrauser > div:nth-child(8) {
   border: none;
   background-color: rgba(227, 222, 222, 0.5);
   position: absolute;
@@ -304,7 +322,6 @@
   font-size: 20px;
 }
 #prod {
-  border: 1px solid red;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
@@ -422,4 +439,158 @@ ul:nth-child(5) {
 #more > p {
   font-size: 12px;
   line-height: 17px;
+}
+
+/* responsiveness */
+@media (max-width: 720px) {
+  /* CSS styles for small screens */
+  #login {
+    display: flex;
+  }
+  .precontainer {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: flex-end;
+  }
+  .precontainer > li:nth-child(1) {
+    display: none;
+  }
+  .precontainer > li:nth-child(2) {
+    width: 150px;
+  }
+  .precontainer > li:nth-child(3) {
+    width: 150px;
+  }
+  #newsearchbar {
+    width: 260px; /* increase max-width */
+  }
+  .newSearchsection {
+    margin-top: -9%;
+  }
+  .newbblogo {
+    max-width: 200px; /* increase max-width */
+    max-height: 150px; /* increase max-height */
+    margin-top: 45px;
+  }
+  #newcartnav {
+    margin-top: -35%;
+    margin-left: 80%;
+  }
+  #newcartnav > p {
+    width: 100px;
+  }
+  #category {
+    margin-top: 3%;
+  }
+  .cry {
+    display: none;
+  }
+  #fruitscontainer {
+    /* border: 1px solid red; */
+    display: flex;
+    flex-wrap: wrap;
+  }
+  #fruitsdiv2 {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  #beveragesdiv2 {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  #featured {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  #leftbtn {
+    position: absolute;
+    left: 30px;
+    top: 110px;
+    border: none;
+    background-color: rgba(227, 222, 222, 0.5);
+    font-size: 20px;
+  }
+  #rightbtn {
+    position: absolute;
+    left: 200px;
+    top: 110px;
+    border: none;
+    background-color: rgba(227, 222, 222, 0.5);
+    font-size: 20px;
+  }
+  #company-info {
+    display: none;
+  }
+}
+@media (min-width: 721px) and (max-width: 1023px) {
+  /* CSS styles for medium screens */
+  .newSearchsection {
+    margin-top: -5%;
+  }
+  #newcartnav {
+    display: none;
+  }
+  #category {
+    margin-top: 3%;
+  }
+  #btncrauser > div:nth-child(1) {
+    border: none;
+    background-color: rgba(227, 222, 222, 0.5);
+    position: absolute;
+    left: 20px;
+    bottom: 13px;
+  }
+  #btncrauser > div:nth-child(2) {
+    border: none;
+    background-color: rgba(227, 222, 222, 0.5);
+    position: absolute;
+    left: 100px;
+    bottom: 13px;
+  }
+  #btncrauser > div:nth-child(3) {
+    border: none;
+    background-color: rgba(227, 222, 222, 0.5);
+    position: absolute;
+    left: 183px;
+    bottom: 13px;
+  }
+  #btncrauser > div:nth-child(4) {
+    border: none;
+    background-color: rgba(227, 222, 222, 0.5);
+    position: absolute;
+    left: 263px;
+    bottom: 13px;
+  }
+  #btncrauser > div:nth-child(5) {
+    border: none;
+    background-color: rgba(227, 222, 222, 0.5);
+    position: absolute;
+    left: 343px;
+    bottom: 13px;
+  }
+  #btncrauser > div:nth-child(6) {
+    border: none;
+    background-color: rgba(227, 222, 222, 0.5);
+    position: absolute;
+    left: 613px;
+    display: none;
+    bottom: 13px;
+  }
+  #btncrauser > div:nth-child(7) {
+    border: none;
+    background-color: rgba(227, 222, 222, 0.5);
+    position: absolute;
+    left: 423px;
+    bottom: 13px;
+  }
+  #btncrauser > div:nth-child(8) {
+    border: none;
+    background-color: rgba(227, 222, 222, 0.5);
+    position: absolute;
+    left: 503px;
+    bottom: 13px;
+  }
+}
+@media (min-width: 1024px) {
+  /* CSS styles for large screens */
 }
